@@ -67,6 +67,7 @@ clear.search.box=Clear search
 add.song.text=Add song to database
 remove.song.text=Remove song from database
 library.add.to.schedule.text=Add to schedule
+library.copy.to.schedule.text=Copy to schedule
 library.edit.song.text=Edit song
 library.remove.song.text=Remove song
 library.print.song.text=Print song
@@ -594,3 +595,4 @@ pause.record.tooltip=Pause Recording
 max.lines.per.slide=Lines per slide (approximately)
 presentation.options.heading=Presentations
 recordings.options.heading=Recordings
+copy.song.db.default=Copy song to schedule by default
